--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
+    "dotenv-safe": "^8.2.0",
     "next": "12.0.10",
+    "postgres": "^1.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sharp": "^0.30.0"
