Add camelcase keys

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
+    "camelcase-keys": "^7.0.2",
     "dotenv-safe": "^8.2.0",
     "next": "12.0.10",
     "postgres": "^1.0.2",
