--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.7.1",
     "camelcase-keys": "^7.0.2",
     "dotenv-safe": "^8.2.0",
+    "js-cookie": "^3.0.1",
     "next": "12.0.10",
     "postgres": "^1.0.2",
     "react": "17.0.2",
