--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@emotion/babel-plugin": "^11.7.2",
     "@emotion/react": "^11.7.1",
+    "@material-ui/core": "^4.12.3",
     "camelcase-keys": "^7.0.2",
     "dotenv-safe": "^8.2.0",
     "js-cookie": "^3.0.1",
