--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv-safe": "^8.2.0",
     "js-cookie": "^3.0.1",
     "next": "12.0.10",
+    "pg-connection-string": "^2.5.0",
     "postgres": "^1.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -52,5 +53,8 @@
     "@typescript-eslint/parser": "5.10.1",
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-react": "7.28.0"
-  }
+  },
+  "cacheDirectories": [
+    ".next/cache"
+  ]
 }
