--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,13 +13,11 @@
     "allowSyntheticDefaultImports": true,
     "downlevelIteration": true,
     "forceConsistentCasingInFileNames": true,
-    "jsx": "preserve",
-    "jsxImportSource": "@emotion/react",
+    "jsx": "react-jsx",
     "noEmit": true,
     "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true,
-    "strict": true,
-    "incremental": true
+    "strict": true
   },
   "include": [
     ".eslintrc.cjs",
@@ -29,8 +27,7 @@
     "**/*.js",
     "**/*.jsx",
     "**/*.cjs",
-    "**/*.mjs",
-    "pages/index.txs"
+    "**/*.mjs"
   ],
   "exclude": ["node_modules", "build"]
 }
