--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "heroku-postbuild": "yarn migrate up && yarn build",
+    "migrate": "dotenv ley"
   },
   "dependencies": {
     "@emotion/babel-plugin": "^11.7.2",
     "@emotion/react": "^11.7.1",
     "@material-ui/core": "^4.12.3",
     "camelcase-keys": "^7.0.2",
+    "dotenv-cli": "^5.0.0",
     "dotenv-safe": "^8.2.0",
     "js-cookie": "^3.0.1",
+    "ley": "^0.7.1",
     "next": "12.0.10",
     "pg-connection-string": "^2.5.0",
     "postgres": "^1.0.2",
