--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/babel-plugin": "^11.7.2",
     "@emotion/react": "^11.7.1",
     "@material-ui/core": "^4.12.3",
+    "bcrypt": "^5.0.1",
     "camelcase-keys": "^7.0.2",
     "dotenv-cli": "^5.0.0",
     "dotenv-safe": "^8.2.0",
@@ -20,7 +21,7 @@
     "ley": "^0.7.1",
     "next": "12.0.10",
     "pg-connection-string": "^2.5.0",
-    "postgres": "^1.0.2",
+    "postgres": "^3.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sharp": "^0.30.0"
@@ -28,6 +29,8 @@
   "devDependencies": {
     "@babel/eslint-parser": "7.16.5",
     "@next/eslint-plugin-next": "12.0.9",
+    "@types/bcrypt": "^5.0.0",
+    "@types/dotenv-safe": "^8.1.2",
     "@types/node": "17.0.13",
     "@types/react": "17.0.38",
     "@types/react-dom": "17.0.11",
@@ -50,7 +53,7 @@
     "eslint-plugin-sonarjs": "0.11.0",
     "eslint-plugin-testing-library": "5.0.4",
     "eslint-plugin-unicorn": "40.1.0",
-    "typescript": "4.5.5"
+    "typescript": "4.6.3"
   },
   "resolutions": {
     "@typescript-eslint/eslint-plugin": "5.10.1",
